いろふさんのプロフィール画像を追加した

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                                 </div>
                             </div>
                             <div class="speaker">
+                            <img src="images/speaker2.png" alt="" class="image" />
                                 <div class="inner">
                                     <h4>うらがみさん</h4>
                                     <p>大阪のプログラマーです。GitHubを日常的に利用しています。</p>
